force-app/main/default/objects/Commission_Rate_Card__c/Commission_Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Commission Rate Card</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Rate Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>