force-app/main/default/objects/Commission_Rate_Card__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(TODAY() &gt;= Effective_From__c, OR(ISBLANK(Effective_To__c), TODAY() &lt;= Effective_To__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>