force-app/main/default/objects/Commission_Rate_Card__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>Rate_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>