force-app/main/default/objects/Commission_Rate_Card__c/fields/Registration_Pct__c.field-meta.xml
<CustomField>
    <fullName>Registration_Pct__c</fullName>
    <label>Registration Milestone %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>