force-app/main/default/objects/Commission_Rate_Card__c/fields/Total_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Pct__c</fullName>
    <formula>(Booking_Pct__c + Agreement_Pct__c + Registration_Pct__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>