force-app/main/default/objects/Commission_Rate_Card__c/validationRules/Effective_From_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_From_Required</fullName>
    <active>true</active>
    <description>Effective From date is mandatory. Belt-and-suspenders complement to the field-level Required attribute — surfaces a custom error message instead of the generic platform message.</description>
    <errorConditionFormula>ISBLANK(Effective_From__c)</errorConditionFormula>
    <errorDisplayField>Effective_From__c</errorDisplayField>
    <errorMessage>Effective From date is required.</errorMessage>
</ValidationRule>