force-app/main/default/objects/Commission_Rate_Card__c/validationRules/Effective_To_After_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_To_After_From</fullName>
    <active>true</active>
    <description>If Effective To is set, it must be strictly after Effective From. Prevents rate cards with negative or zero-duration effective windows.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Effective_To__c)),
  Effective_To__c &lt;= Effective_From__c
)</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Effective To date must be after Effective From date.</errorMessage>
</ValidationRule>